# kis-ai-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: risk.yaml  settings.yaml
src/: main.py  main_coordinator.py  risk_guard.py
src/agents/analyst/: __init__.py  agent.py  fundamental.py  regime.py  sentiment.py  technical.py
src/agents/cio/: __init__.py  agent.py
src/agents/collector/: __init__.py  agent.py  factory.py
src/agents/collector/sources/: dart_source.py  kis_source.py  macro_source.py  news_source.py
src/agents/portfolio/: __init__.py  agent.py
src/agents/strategist/: __init__.py  agent.py
src/agents/strategist/strategies/: base.py  composite.py  mean_reversion.py  momentum.py  value.py
src/broker/: __init__.py  account.py  kis_client.py  market_data.py  order_executor.py  websocket_stream.py
src/core/: __init__.py  config.py  event_bus.py  events.py  models.py
tests/: test_analyst_agent.py  test_collector_agent.py  test_portfolio_agent.py  test_risk_guard.py  test_strategist_agent.py
